--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Tic Tac Toe game in JavaScript" />
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/styles.css" />
@@ -18,6 +19,7 @@
       <section class="board">
         <article id="board" class="board__grid">
           <button
+            aria-label="Cell at row 0, column 0"
             class="board__cell"
             id="00"
             onclick="handleOnClick({row:0,col:0})"
@@ -28,6 +30,7 @@
             </div>
           </button>
           <button
+            aria-label="Cell at row 0, column 1"
             class="board__cell"
             id="01"
             onclick="handleOnClick({row:0,col:1})"
@@ -35,36 +38,44 @@
             <div class="circle"></div>
           </button>
           <button
+            aria-label="Cell at row 0, column 2"
             class="board__cell"
             id="02"
             onclick="handleOnClick({row:0,col:2})"
           ></button>
           <button
+            aria-label="Cell at row 1, column 0"
             class="board__cell"
             id="10"
             onclick="handleOnClick({row:1,col:0})"
           ></button>
           <button
+            aria-label="Cell at row 1, column 1"
+            name="board-cell"
             class="board__cell"
             id="11"
             onclick="handleOnClick({row:1,col:1})"
           ></button>
           <button
+            aria-label="Cell at row 1, column 2"
             class="board__cell"
             id="12"
             onclick="handleOnClick({row:1,col:2})"
           ></button>
           <button
+            aria-label="Cell at row 2, column 0"
             class="board__cell"
             id="20"
             onclick="handleOnClick({row:2,col:0})"
           ></button>
           <button
+            aria-label="Cell at row 2, column 1"
             class="board__cell"
             id="21"
             onclick="handleOnClick({row:2,col:1})"
           ></button>
           <button
+            aria-label="Cell at row 2, column 2"
             class="board__cell"
             id="22"
             onclick="handleOnClick({row:2,col:2})"
