[ADD] styles for tablet resolution

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Tic Tac Toe game in JavaScript" />
+    <meta name="author" content="Diego Herrera Prado" />
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./styles/tablet.css" />
     <script defer src="./GUIFeatures.js"></script>
     <script defer src="./main.js"></script>
     <title>Tic-Tac-Toe</title>
@@ -80,5 +82,17 @@
         <button class="reset-btn" onclick="initialState()">Reset Game</button>
       </section>
     </main>
+    <footer>
+      <p>
+        Developed by
+        <a
+          target="_blank"
+          title="LinkedIn profile"
+          href="https://www.linkedin.com/in/diego-hp/"
+        >
+          diego-hp
+        </a>
+      </p>
+    </footer>
   </body>
 </html>
